# checkperm

./: CMakeLists.txt  README.md
src/: CommandLineParser.cpp  CommandLineParser.h  DirectoryContent.h  main.cpp
src/Filesystem/: DirectoryContent.cpp  DirectoryContent.h  FileInfo.cpp  FileInfo.h  Permission.h
